common menu layout overlap fix

--- a/src/containers/Common/components/CommonDetailContainer/DiscussionsComponent/index.scss
+++ b/src/containers/Common/components/CommonDetailContainer/DiscussionsComponent/index.scss
@@ -175,8 +175,8 @@
   .discussion-title-wrapper {
     .add-button {
       position: fixed;
-      right: 24px;
-      bottom: 24px;
+      right: 1.5rem;
+      bottom: 4.625rem;
       z-index: 2;
       box-shadow: 0 0 6px 0 $fixed-button-shadow;
       background-color: $purple;
