--- a/src/containers/Common/components/CommonDetailContainer/ProposalsComponent/index.scss
+++ b/src/containers/Common/components/CommonDetailContainer/ProposalsComponent/index.scss
@@ -385,7 +385,7 @@
     .add-button {
       position: fixed;
       right: 1.5rem;
-      bottom:  1.5rem;
+      bottom: 4.625rem;
       z-index: 2;
       box-shadow: 0 0 6px 0 $fixed-button-shadow;
       background-color: $purple;
