--- a/src/containers/Common/containers/CommonDetailContainer/index.scss
+++ b/src/containers/Common/containers/CommonDetailContainer/index.scss
@@ -375,6 +375,7 @@
             color: $secondary-blue;
             background-color: #{$purple}26;
             box-sizing: border-box;
+            margin-bottom: 1.5rem;
           }
 
           .common-content-selector__share-icon {
